<resources>
    <string name="app_name">FITNESS APPLICATION </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Exercice1">Exercice 1</string>
    <string name="Exercice2">Exercice 2</string>
    <string name="Exercice3">Exercice 3</string>
    <string name="Exercice4">Exercice 4</string>
    <string name="Exercice5">Exercice 5</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Biceps</string>
    <string name="menu_slideshow">Dorsaux</string>
    <string name="menu_jambes">Jambes</string>
    <string name="menu_abdos">Abdos</string>
    <string name="menu_profil">Profile</string>
</resources>