<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.salledesportapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_biceps"
        android:name="com.example.salledesportapplication.ui.biceps.BicepsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_biceps" />

    <fragment
        android:id="@+id/nav_dorsaux"
        android:name="com.example.salledesportapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_dorsaux" />
    <fragment
        android:id="@+id/nav_jambes"
        android:name="com.example.salledesportapplication.ui.jambes.JambesFragment"
        android:label="@string/menu_jambes"
        tools:layout="@layout/fragment_jambes" />
    <fragment
        android:id="@+id/nav_abdos"
        android:name="com.example.salledesportapplication.ui.abdos.AbdosFragment"
        android:label="@string/menu_abdos"
        tools:layout="@layout/fragment_abdos" />
    <fragment
        android:id="@+id/nav_profil"
        android:name="com.example.salledesportapplication.ui.profil.ProfileFragment"
        android:label="@string/menu_profil"
        tools:layout="@layout/fragment_profile" />
</navigation>